<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="RtlHardcoded">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:behavior_overlapTop="78dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/background"
                android:layout_width="411dp"
                android:layout_height="235dp"
                android:src="@color/teal_200"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/poster"
                android:layout_width="157dp"
                android:layout_height="243dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="176dp"
                android:src="@color/teal_200"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.032"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/background"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/title"
                android:layout_width="209dp"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:gravity="start"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.571"
                app:layout_constraintStart_toEndOf="@+id/poster"
                app:layout_constraintTop_toBottomOf="@+id/background"
                tools:text="@string/title" />

            <TextView
                android:id="@+id/release"
                android:layout_width="100dp"
                android:layout_height="21dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="48dp"
                android:gravity="start"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.146"
                app:layout_constraintStart_toEndOf="@+id/poster"
                app:layout_constraintTop_toBottomOf="@+id/title"
                tools:text="@string/terbit" />

            <TextView
                android:id="@+id/durasi"
                android:layout_width="100dp"
                android:layout_height="21dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="start"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/release"
                app:layout_constraintTop_toBottomOf="@+id/title"
                tools:text="@string/durasi" />

            <TextView
                android:id="@+id/text_userscore"
                android:layout_width="75dp"
                android:layout_height="21dp"
                android:layout_marginEnd="40dp"
                android:gravity="center"
                android:text="@string/user_score"
                android:textColor="@color/teal_700"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/language"
                app:layout_constraintEnd_toStartOf="@+id/overview"
                app:layout_constraintTop_toBottomOf="@+id/poster"
                app:layout_constraintVertical_bias="0.421" />

            <TextView
                android:id="@+id/text_deskripsi2"
                android:layout_width="130dp"
                android:layout_height="21dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:gravity="center"
                android:text="@string/kilasan_singkat"
                android:textColor="@color/teal_700"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/overview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.185"
                app:layout_constraintStart_toEndOf="@+id/poster"
                app:layout_constraintTop_toBottomOf="@+id/tagline" />

            <TextView
                android:id="@+id/genre"
                android:layout_width="209dp"
                android:layout_height="21dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:gravity="start"
                android:textSize="13sp"
                app:layout_constraintStart_toEndOf="@+id/poster"
                app:layout_constraintTop_toBottomOf="@+id/release"
                tools:text="@string/genre" />

            <TextView
                android:id="@+id/overview"
                android:layout_width="207dp"
                android:layout_height="190dp"
                android:layout_marginBottom="64dp"
                android:gravity="start"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.946"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="@string/description" />

            <TextView
                android:id="@+id/tagline"
                android:layout_width="159dp"
                android:layout_height="21dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/tagline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.183"
                app:layout_constraintStart_toEndOf="@+id/poster"
                app:layout_constraintTop_toBottomOf="@+id/genre" />

            <ImageView
                android:id="@+id/circletext"
                android:layout_width="53dp"
                android:layout_height="62dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_circle_black"
                app:layout_constraintEnd_toStartOf="@+id/text_userscore"
                app:layout_constraintHorizontal_bias="0.888"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/poster"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/average"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:gravity="center"
                android:text="@string/average"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/circletext"
                app:layout_constraintEnd_toEndOf="@+id/circletext"
                app:layout_constraintStart_toStartOf="@+id/circletext"
                app:layout_constraintTop_toTopOf="@+id/circletext" />

            <TextView
                android:id="@+id/status"
                android:layout_width="159dp"
                android:layout_height="21dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/status"
                android:textSize="13sp"
                app:layout_constraintEnd_toStartOf="@+id/overview"
                app:layout_constraintHorizontal_bias="0.296"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/language" />

            <TextView
                android:id="@+id/language"
                android:layout_width="159dp"
                android:layout_height="21dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/language"
                android:textSize="13sp"
                app:layout_constraintEnd_toStartOf="@+id/overview"
                app:layout_constraintHorizontal_bias="0.296"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/circletext" />

            <TextView
                android:id="@+id/budget"
                android:layout_width="170dp"
                android:layout_height="21dp"
                android:layout_marginTop="8dp"
                android:text="@string/budget"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.066"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/status" />

            <TextView
                android:id="@+id/revenue"
                android:layout_width="170dp"
                android:layout_height="21dp"
                android:layout_marginTop="8dp"
                android:text="@string/revenue"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.066"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/budget" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="568dp"
                android:contentDescription="@string/favorite"
                android:focusable="true"
                android:src="@drawable/ic_favorite_border"
                app:backgroundTint="@color/light_gray"
                app:fabSize="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>