<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="title_activity_detail_movies">Detail Movie Catalogue</string>
    <string name="title">Judul</string>
    <string name="description">Deskripsi</string>
    <string name="movies">Movies</string>
    <string name="tvshow">TV Show</string>
    <string name="genre">Genre</string>
    <string name="terbit">Terbit</string>
    <string name="durasi">Durasi</string>
    <string name="kilasan_singkat">Overview</string>
    <string name="gambar">Gambar</string>
    <string name="average">0%</string>
    <string name="tagline">Tagline</string>
    <string name="language">Language</string>
    <string name="status">Status</string>
    <string name="budget">Anggaran</string>
    <string name="revenue">Pemasukan</string>
    <string name="language_a">Language : %s</string>
    <string name="status_a">Status : %s</string>
    <string name="budget_a">Budget : %s</string>
    <string name="revenue_a">Revenue : %s</string>
    <string name="user_score">User Score</string>
    <string name="favorite">Favorite</string>
    <string name="error">Terjadi Kesalahan</string>
    <string name="message_undo">Batalkan menghapus item sebelumnya?</string>
    <string name="message_ok">OK</string>
    <string name="setting">Setting</string>
    <string name="setreminder">Setel Pengingat Film</string>
    <string name="about">Tentang Author</string>
    <string name="name_author">Auldy Ansya Rullah</string>
    <string name="akun_gmail">a1211560@bangkit.academy</string>
    <string name="send_email">Kirim Email ke Author</string>
    <string name="check_profile">Cek Profile Author</string>
    <string name="daily_reminder">Pengingat Harian</string>
    <string name="repeating_on">"Mengulang Pengaturan Alarm"</string>
    <string name="repeating_off">Alarm Berulang Batal</string>
</resources>